--- a/src/i18n/locales/kk.json
+++ b/src/i18n/locales/kk.json
@@ -537,6 +537,9 @@
       "themes": "Премиум темалар"
     },
     "choosePlan": "Жоспар таңдау",
+    "description": "LinkMAX мүмкіндіктерін бизнесіңіз үшін толық ашыңыз",
+    "alreadyFree": "Тегін тариф әлдеқашан белсенді",
+    "comingSoon": "Төлем жуырда қолжетімді болады. Жаңартуларды қадағалаңыз.",
     "currentPlan": "Ағымдағы жоспар"
   },
   "gallery": {
