--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -537,6 +537,9 @@
       "themes": "Премиум темы"
     },
     "choosePlan": "Выбрать план",
+    "description": "Разблокируйте все возможности LinkMAX для вашего бизнеса",
+    "alreadyFree": "Бесплатный тариф уже активен",
+    "comingSoon": "Оплата скоро будет доступна. Следите за обновлениями.",
     "currentPlan": "Текущий план"
   },
   "gallery": {
