--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -170,6 +170,11 @@
     "chef": "Повар/Кондитер"
   },
   "onboarding": {
+    "goalTitle": "Что ты хочешь получить с этой страницы?",
+    "goalDescription": "Выберем блоки так, чтобы это случилось быстрее.",
+    "goalClicks": "Клики",
+    "goalLeads": "Заявки",
+    "goalBookings": "Запись",
     "nicheTitle": "Выберите вашу нишу",
     "nicheDescription": "AI создаст для вас персональную страницу за минуту",
     "detailsTitle": "Расскажите о себе",
